fix pipeline compiling failure